Allow all hosts

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,3 +6,10 @@ kafka.userName=${?KAFKA_USERNAME}
 kafka.password=${?KAFKA_PASSWORD}
 zookeeperPort=${?ZOOKEEPER_PORT}
 zookeeperHost=${?ZOOKEEPER_HOST}
+play.http.secret.key=${?APPLICATION_SECRET}
+
+play.filters.enabled += play.filters.hosts.AllowedHostsFilter
+
+play.filters.hosts {
+  allowed = ["."]
+}
