--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,5 @@
 # https://www.playframework.com/documentation/latest/Configuration
-play.modules.enabled += "kafkastreams.KafkaStreamsAct"
+play.modules.enabled += "services.kafkastreams.KafkaStreamsAct"
 env=""
 env=${?DEPLOYMENT_ENV}
 app.version="0.1"
@@ -9,6 +9,7 @@ kafka.password=${?KAFKA_PASSWORD}
 zookeeperPort=${?ZOOKEEPER_PORT}
 zookeeperHost=${?ZOOKEEPER_HOST}
 brokerProtocol=${?BROKER_PROTOCOL}
+
 play.http.secret.key=${?APPLICATION_SECRET}
 
 play.filters.enabled += play.filters.hosts.AllowedHostsFilter
