Add more details in client page

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,3 +4,5 @@ play.modules.enabled += "kafkastreams.KafkaStreamsAct"
 bootstrap.server=${?BROKER_BOOTSTRAP}
 kafka.userName=${?KAFKA_USERNAME}
 kafka.password=${?KAFKA_PASSWORD}
+zookeeperPort=${?ZOOKEEPER_PORT}
+zookeeperHost=${?ZOOKEEPER_HOST}
