Configure broker protocol

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,6 +7,7 @@ kafka.userName=${?KAFKA_USERNAME}
 kafka.password=${?KAFKA_PASSWORD}
 zookeeperPort=${?ZOOKEEPER_PORT}
 zookeeperHost=${?ZOOKEEPER_HOST}
+brokerProtocol=${?BROKER_PROTOCOL}
 play.http.secret.key=${?APPLICATION_SECRET}
 
 play.filters.enabled += play.filters.hosts.AllowedHostsFilter
