Sperate the dev instances from production

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,7 @@
 # https://www.playframework.com/documentation/latest/Configuration
 play.modules.enabled += "kafkastreams.KafkaStreamsAct"
-
+env=""
+env=${?ENV}
 app.version="0.1"
 bootstrap.server=${?BROKER_BOOTSTRAP}
 kafka.userName=${?KAFKA_USERNAME}
