create models package

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,5 +1,5 @@
 # https://www.playframework.com/documentation/latest/Configuration
-play.modules.enabled += "services.kafkastreams.KafkaStreamsAct"
+play.modules.enabled += "services.stream.GroupMetadataTopic.GroupMetadataStreamAct"
 
 env=""
 env=${?DEPLOYMENT_ENV}
